<?php
namespace Patterns\Structural\Facade\Domnikl;

interface OsInterface {
    public function halt();
    public function getName(): string;
}
